--- a/typeOf检测变量的数据类型.html
+++ b/typeOf检测变量的数据类型.html
@@ -12,7 +12,7 @@
 		console.log(typeof(Number)) //  Function
 		console.log(typeof(String)) //  Function
 		// console.log(instanceof(Array)) //  Function
-		
+		console.log(typeof(null)); // object
 
 	</script>
 </head>
